add spark library & Jvm Option